[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Enemy/idle/Enemy-idle1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemy/idle/Enemy-idle2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemy/idle/Enemy-idle3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemy/idle/Enemy-idle4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemy/walk/Enemy-walk2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemy/walk/Enemy-walk4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemy/walk/Enemy-walk3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemy/walk/Enemy-walk1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemy/Enemy.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 8 )

[sub_resource type="CircleShape2D" id=3]
radius = 2000.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 26.351, 22.2887 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.573643, 1 )
colors = PoolColorArray( 0.250732, 0.8125, 0.470173, 1, 0, 0.800781, 0.294037, 1, 0.964706, 0.992157, 0.972549, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 40.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 117.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 8.0
scale_random = 1.0
color_ramp = SubResource( 6 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
visible = false
shape = SubResource( 3 )

[node name="Collider" type="Area2D" parent="."]

[node name="ColliderShape" type="CollisionShape2D" parent="Collider"]
shape = SubResource( 7 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 32
process_material = SubResource( 4 )

[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="body_entered" from="Collider" to="." method="_on_Collider_body_entered"]
[connection signal="body_exited" from="Collider" to="." method="_on_Collider_body_exited"]
